# genpycli

./: pyproject.toml
genpycli/: cli.py
genpycli/assets/: pyproject.toml
genpycli/assets/tmp_cli/: cli.py
