[tool.poetry]
name = "genpycli"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
include = ["genpycli/assets/*"]

[tool.poetry.dependencies]
python = "^3.9"
fire = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
genpycli = "genpycli:main_cli"
